--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "sass-loader": "^7.1.0",
         "tailwindcss": "^1.1.2",
         "vue": "^2.5.17",
+        "vue-js-modal": "^1.3.31",
+        "vue-multiselect": "^2.1.6",
         "vue-router": "^3.1.2",
         "vue-template-compiler": "^2.6.10",
         "vue2-leaflet": "^2.2.1",
