--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
         "tailwindcss": "^1.1.2",
         "vue": "^2.5.17",
         "vue-js-modal": "^1.3.31",
-        "vue-multiselect": "^2.1.6",
         "vue-router": "^3.1.2",
+        "vue-select": "^3.1.0",
+        "vue-tailwind-modal": "0.0.5",
         "vue-template-compiler": "^2.6.10",
         "vue2-leaflet": "^2.2.1",
         "vuex": "^3.1.1"
