--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
         "cross-env": "^5.1",
         "laravel-mix": "^4.0.7",
-        "leaflet": "^1.5.1",
         "lodash": "^4.17.5",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "tailwindcss": "^1.1.2",
         "vue": "^2.5.17",
-        "vue-js-modal": "^1.3.31",
         "vue-router": "^3.1.2",
-        "vue-select": "^3.1.0",
-        "vue-tailwind-modal": "0.0.5",
         "vue-template-compiler": "^2.6.10",
-        "vue2-leaflet": "^2.2.1",
         "vuex": "^3.1.1"
     },
-    "dependencies": {}
+    "dependencies": {
+        "axios": "^0.19.0",
+        "leaflet": "^1.5.1",
+        "tailwindcss": "^1.1.2",
+        "vue-js-modal": "^1.3.31",
+        "vue-select": "^3.1.0",
+        "vue2-leaflet": "^2.2.1"
+    }
 }
