--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "tailwindcss": "^1.1.2",
         "vue-js-modal": "^1.3.31",
         "vue-select": "^3.1.0",
+        "vue-toast-notification": "0.0.2",
         "vue2-leaflet": "^2.2.1"
     }
 }
